[gd_scene load_steps=5 format=2]

[ext_resource path="res://검은건반/blac_gun_ban.gd" type="Script" id=1]
[ext_resource path="res://검은건반/검은건반_희게.png" type="Texture" id=2]
[ext_resource path="res://검은건반/검은건반.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 45, 132.5 )

[node name="gun_ban" type="Area2D"]
script = ExtResource( 1 )
white_sprite = ExtResource( 2 )
black_sprite = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 8 )
scale = Vector2( 1, 0.442 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 8 )
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="player" type="AudioStreamPlayer" parent="."]

[connection signal="mouse_entered" from="." to="." method="_on_gun_ban_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_gun_ban_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
